Butao add funcionando Inserindo na base indexedDB

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 <body>
     <!-- não executando pelo codepen.io no chrome -->
     <form id="formulario">
+        <label for="codigo">Código</label>
+        <input type="text" name="codigo" id="codigo" />
         <label for="nome">Nome</label>
         <input type="text" name="nome" id="nome" />
         <label for="preco">Preço</label>
